# conversations_mj

./: OPTIM_PLAN.md  compose.yml  sse_response.txt
.claude/: settings.local.json
docker/auth/: realm.json
docs/: env.md  feature-flags.md  llm-configuration.md  ogllm-inflight-counter-bug.md  tools.md
docs/tools/: document_tools.md  legifrance.md
src/backend/: pyproject.toml  python.exe.stackdump
src/backend/chat/: ai_sdk_types.py  llm_configuration.py  mcp_servers.py  models.py  serializers.py  views.py
src/backend/conversations/: settings.py
src/eval/: .env
src/eval/output/: eval_20260308_165156.html  eval_20260308_173740.html  eval_20260308_182324.html  eval_20260308_190046.html  eval_20260308_194229.html  meta_20260308_153656.json  meta_20260308_165156.json  meta_20260308_173740.json  meta_20260308_182324.json  meta_20260308_190046.json  (+7 more)
src/frontend/: package-lock.json
src/mcp-server/: .env.example  Dockerfile  compose.yml  pyproject.toml  server.py
src/mcp-server/tools/: documents.py  legifrance.py  legifrance_mcp.py  weather.py  web_search.py
src/mcp-server/tools/legifrance/: __init__.py  api.py  cache.py  constants.py  judilibre_api.py  logging_utils.py
src/mcp-server/tools/legifrance/core/: criteria.py  inputs.py  models.py  parser.py  schemas.py  search.py  text_utils.py  urls.py
src/mcp-server/tools/legifrance/tools/: __init__.py  get_document.py  judilibre_get_decision.py  judilibre_search.py  list_codes.py  search_admin.py  search_code_article_by_number.py  search_codes_lois.py  search_conventions.py  search_jurisprudence.py
(+146 files in other folders)
