[project]
name = "conversations-mcp-server"
version = "0.1.0"
description = "MCP server replicating all Conversations tools for use with n8n or pydantic-ai MCP clients"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "uvicorn>=0.30.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
legifrance = [
    "beautifulsoup4>=4.12.0",
]
websearch = [
    "trafilatura>=1.6.0",
]
all = [
    "conversations-mcp-server[legifrance,websearch]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
